--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.4.2",
-    "express": "^4.18.2"
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
